--- a/mini_zine.html
+++ b/mini_zine.html
@@ -32417,13 +32417,13 @@ width: 0.25in; height: 0; border-top: 1px dashed #666;
   🪩  🪩  🪩 <strong>HANDS RAISED</strong> 🪩  🪩  🪩 <br><br>
 </div> 
         <ol>
-        <li>Kano—Another Life</li>
+        <li>Reggio—The Light</li>
         <li>Galaxy Band—Gosh</li>
         <li>Solange—Losing You</li>
         <li>John David—On The Mountain ⛰</li>
         <li>Bob Dylan—No Time To Think</li>
         <li>Josette Martial—Let&#39;s Be Winners</li>
-        <li>The Ray and and John—Day By Day</li>
+        <li>The Temper Trap—Sweet Disposition</li>
         <li>Jerry Garcia Band—Rubin and Cherise</li>
         <li>Phish—What&#39;s Going Through Your Mind</li>
         <li>Isaac Hayes—By The Time I Get To Phoenix</li>
